Make new trade form responsive for mobile and fix vertical text overflow for pending cards

--- a/client/src/styles/cardPendingTrade.css
+++ b/client/src/styles/cardPendingTrade.css
@@ -51,10 +51,13 @@
 
     .ptRight{
         flex: 2;
-        margin: 5%;
+        padding: 2% 2%;
         color: white;
         font-size: 1.5em;
         width: 50%;
+        height: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .ptBottom{
@@ -74,6 +77,11 @@
     .ptTitle{
         margin-top: -1%;
         padding-bottom: 1%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .ptAuthor {
         text-overflow: ellipsis;
         overflow: hidden;
     }
@@ -124,6 +132,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        height: 100%;
     }
 
     .ctLeft{
@@ -151,10 +160,13 @@
 
     .ptRight{
         flex: 2;
-        margin: 5%;
+        padding: 2% 2%;
         color: white;
         font-size: 1.5em;
         width: 50%;
+        height: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .ptBottom{
@@ -174,6 +186,11 @@
     .ptTitle{
         margin-top: -1%;
         padding-bottom: 1%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .ptAuthor {
         text-overflow: ellipsis;
         overflow: hidden;
     }
